Add: Media Query 768px

--- a/css/style.css
+++ b/css/style.css
@@ -127,3 +127,21 @@ img {
 /************************************************
     SOLUZIONE RESPONSIVE
  ************************************************/
+
+
+@media screen and (max-width: 768px) {
+
+    .lessons .container {
+        width: 100%;
+    }
+
+    .steps .container {
+        width: 100%;
+    }
+
+    .why-us .container {
+        width: 100%;
+    }
+
+}
+
