--- a/css/style.css
+++ b/css/style.css
@@ -145,3 +145,19 @@ img {
 
 }
 
+@media screen and (max-width: 480px) {
+
+    .lessons .row, 
+    .steps .row, 
+    .why-us .row {
+        flex-wrap: wrap;
+    }
+
+    .lessons .row .col, 
+    .steps .row .col, 
+    .why-us .row .col {
+        width: 100%;
+        margin: 30px 0;
+    }
+
+}
