--- a/css/style.css
+++ b/css/style.css
@@ -126,24 +126,17 @@ img {
 
 /************************************************
     SOLUZIONE RESPONSIVE
- ************************************************/
+************************************************/
 
 
 @media screen and (max-width: 768px) {
 
-    .lessons .container {
-        width: 100%;
-    }
-
-    .steps .container {
-        width: 100%;
-    }
-
+    .lessons .container,
+    .steps .container,
     .why-us .container {
         width: 100%;
     }
-
-}
+} 
 
 @media screen and (max-width: 480px) {
 
@@ -159,5 +152,4 @@ img {
         width: 100%;
         margin: 30px 0;
     }
-
 }
