--- a/bonus/css/style.css
+++ b/bonus/css/style.css
@@ -144,9 +144,23 @@ img {
 
     .row .col {
         width: 100%;
-        margin: 30px 0;
+        margin: 40px 0;
+    }
+
+    .why-us {
+        background-color: black;
+        margin-bottom: 0;
+    }
+    .steps {
+        margin-bottom: 0px;
+    }
+
+    .why-us .container {
+        padding-top: 30px;
     }
 }
+
+
 
 
 
