--- a/css/style.css
+++ b/css/style.css
@@ -146,5 +146,17 @@ img {
         width: 100%;
         margin: 30px 0;
     }
+
+    .why-us {
+        background-color: black;
+        margin-bottom: 0;
+    }
+    .steps {
+        margin-bottom: 0px;
+    }
+
+    .why-us .container {
+        padding-top: 30px;
+    }
 }
 
